[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PygameUIKit"
version = "0.0.6"
authors = [
  { name="Times0", email="times.coding@gmail.com" },
]
description = "A UIKit for Pygame"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
